--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "styled-components": "4.2.0"
   },
   "devDependencies": {
+    "prettier": "2.5.1",
     "react-scripts": "3.0.0"
   },
   "resolutions": {
