--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "firebase": "6.0.2",
     "node-sass": "4.12.0",
-    "react": "^16.8.6",
+    "react": "^17.0.1",
     "react-dom": "^16.8.6",
-    "react-redux": "7.2.4",
-    "react-router-dom": "5.2.0",
+    "react-redux": "7.0.3",
+    "react-router-dom": "5.0.0",
     "react-stripe-checkout": "2.6.3",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
@@ -20,8 +20,8 @@
     "styled-components": "4.2.0"
   },
   "devDependencies": {
-    "prettier": "2.5.1",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "prettier": "^2.5.1"
   },
   "resolutions": {
     "babel-jest": "24.7.1"
