--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crwn-clothing-server",
   "version": "1.0.0",
   "engines": {
-    "node": "12.22.7",
+    "node": "12.22.9",
     "npm": "6.14.15"
   },
   "scripts": {
@@ -18,6 +18,7 @@
     "compression": "^1.7.4",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
+    "express-sslify": "^1.2.0",
     "stripe": "6.28.0"
   },
   "devDependencies": {
